--- a/js/learn4.css
+++ b/js/learn4.css
@@ -3,37 +3,41 @@ body {
 }
 
 input {
-    border: 1px solid pink;
-    background-color: white;
-    border-radius: 4px;
+    width: 120px;
+    border-radius: 3px;
 }
 
-#output {
-    border: 1px solid pink;
+input[type=submit] {
+    width: 40px;
     background-color: white;
-    border-radius: 6px;
-    white-space: pre;
+    border: 1px, solid black;
+    border-radius: 8px;
 }
 
-#now {
+.form-input {
     border: 1px solid black;
-    background-color: pink;
-    border-radius: 6px;
+    border-radius: 4px;
+    max-width: 200px;
 }
 
-#number {
-    width: 60px;
-    box-sizing: border-box;
-}
-
-#div1 {
-    width: 300px;
-    display: flex;
-    justify-content: space-around;
-}
-
-#div2 {
-    width: 300px;
+.inputs {
     display: flex;
     justify-content: center;
+}
+
+.outputs {
+    width: 200px;
+}
+
+.prefix-input {
+    width: 50px;
+}
+
+.prefix-output {
+    float: left;
+}
+
+#resp1 {
+    width: 160px;
+    overflow: auto;
 }
